# ranger

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SKILL.md  build.rs  justfile
.agents/skills/rust-coverage/: SKILL.md
.github/workflows/: ci.yml  release.yml
.ramekin/: Dockerfile
crates/ranger-cli/: Cargo.toml
crates/ranger-cli/src/: main.rs  output.rs
crates/ranger-cli/src/commands/: backlog.rs  blocker.rs  comment.rs  mod.rs  tag.rs  task.rs
crates/ranger-cli/tests/: cli.rs
crates/ranger-lib/: Cargo.toml
crates/ranger-lib/migrations/: 001_initial.sql
crates/ranger-lib/src/: db.rs  lib.rs
crates/ranger-lib/src/ops/: backlog.rs  blocker.rs  comment.rs  mod.rs  tag.rs  task.rs
docs/plans/: 2026-03-02-implementation-plan.md  2026-03-02-initial-design.md
migrations/: 002_unique_backlog_name.sql  003_drop_backlog_key.sql  004_single_backlog.sql  005_drop_tags_blockers.sql  006_add_archived.sql  007_add_tags.sql  008_drop_parent_id.sql  009_task_edges.sql  010_add_done_at.sql  011_drop_task_edges.sql  012_rename_queued_to_ready.sql  013_add_state_check.sql
src/: db.rs  error.rs  key.rs  lib.rs  models.rs  position.rs  timestamp.rs
src/ops/: backlog.rs  blocker.rs  comment.rs  edge.rs  mod.rs  tag.rs  task.rs
static/: board.js  style.css
templates/: base.html  board.html  task.html
templates/panels/: backlog.html  column.html
tests/: cli.rs
