[package]
name = "ranger"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ranger"
path = "src/bin/ranger/main.rs"

[dependencies]
axum = "*"
color-eyre = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
jiff = { version = "*", features = ["serde"] }
clap = { version = "*", features = ["derive", "env", "unstable-ext"] }
clap_complete = { version = "*", features = ["unstable-dynamic"] }
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sqlx = { version = "*", features = ["runtime-tokio", "sqlite", "migrate"] }
tera = "*"
thiserror = "*"
tokio = { version = "*", features = ["full"] }
xdg = "*"

[dev-dependencies]
assert_cmd = "*"
predicates = "3.1.4"
tempfile = "*"
