[package]
name = "ranger-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ranger"
path = "src/main.rs"

[dependencies]
ranger-lib = { path = "../ranger-lib" }
clap = { version = "*", features = ["derive", "env"] }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
anyhow = "*"
xdg = "*"
