[package]
name = "ranger-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "*", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rand = "*"
chrono = { version = "*", features = ["serde"] }
thiserror = "*"

[dev-dependencies]
tempfile = "*"
